--- a/max2-charts/template/max2.yaml
+++ b/max2-charts/template/max2.yaml
@@ -1,13 +1,36 @@
-apiVersion: v1
-kind: ConfigMap
+# apiVersion: v1
+# kind: ConfigMap
+# metadata:
+#   annotations:
+#     kubectl.kubernetes.io/last-applied-configuration: |
+#       {"apiVersion":"v1","kind":"ConfigMap","metadata":{"annotations":{},"labels":{"app.kubernetes.io/name":"argocd-cm","app.kubernetes.io/part-of":"argocd"},"name":"argocd-cm","namespace":"argocd"}}
+#   labels:
+#     app.kubernetes.io/name: argocd-cm
+#     app.kubernetes.io/part-of: argocd
+#   name: argocd-cm
+#   namespace: argocd
+# data:
+#   accounts.max: apiKey, login
+
+apiVersion: apps/v1
+kind: Deployment
 metadata:
-  annotations:
-    kubectl.kubernetes.io/last-applied-configuration: |
-      {"apiVersion":"v1","kind":"ConfigMap","metadata":{"annotations":{},"labels":{"app.kubernetes.io/name":"argocd-cm","app.kubernetes.io/part-of":"argocd"},"name":"argocd-cm","namespace":"argocd"}}
+  name: react01-front
+  namespace: max3
   labels:
-    app.kubernetes.io/name: argocd-cm
-    app.kubernetes.io/part-of: argocd
-  name: argocd-cm
-  namespace: argocd
-data:
-  accounts.max: apiKey, login
+    app: react01-front
+spec:
+  replicas: 2
+  selector:
+    matchLabels:
+      app: react01-front
+  template:
+    metadata:
+      labels:
+        app: react01-front
+    spec:
+      containers:
+      - name: react01-front
+        image: nginx
+        ports:
+        - containerPort: 80
