--- a/charts/index.yaml
+++ b/charts/index.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
 entries:
-  max2-charts:
+  max-chart:
   - apiVersion: v2
     appVersion: 0.1.0
-    created: "2024-04-30T09:31:02.2868686-07:00"
+    created: "2024-04-30T09:40:07.9649678-07:00"
     description: A Helm chart for Kubernetes
-    digest: bd1d543e847055658c85a66e57bc6589d875161fde258eda3f2851afe59598b0
-    name: max2-charts
+    digest: 80712b8c63925865ea410be482b954b2a50d34e3377a098f78e29430c9297f2f
+    name: max-chart
     type: application
     urls:
-    - max2-charts-0.1.0.tgz
+    - max-chart-0.1.0.tgz
     version: 0.1.0
-generated: "2024-04-30T09:31:02.2857598-07:00"
+generated: "2024-04-30T09:40:07.9643996-07:00"
