--- a/max2-charts/Chart.yaml
+++ b/max2-charts/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: max2-charts
+name: max-chart
 description: A Helm chart for Kubernetes
 
 # A chart can be either an 'application' or a 'library' chart.
